--- a/awse/templates/awse/base.html
+++ b/awse/templates/awse/base.html
@@ -20,26 +20,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
         {# JavaScripts load #}
-        <script src="{% static 'my_web/js/jquery.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="{% static 'my_web/bootstrap/js/bootstrap.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="{% static 'my_web/js/notify.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="{% static 'my_web/js/aos.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="{% static 'my_web/fontawesome/js/all.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="{% static 'my_web/js/bluebird.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="{% static 'my_web/js/tiny-slider.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="{% static 'awse/js/jquery.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="{% static 'awse/bootstrap/js/bootstrap.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="{% static 'awse/js/notify.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="{% static 'awse/js/aos.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="{% static 'awse/fontawesome/js/all.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="{% static 'awse/js/bluebird.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="{% static 'awse/js/tiny-slider.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
         <link rel="search" type="application/opensearchdescription+xml" title="AWARE" href="/opensearch.xml">
 
-        <link rel="stylesheet" href="{% static 'my_web/bootstrap/css/bootstrap.min.css' %}" crossorigin="anonymous" />
-        <link rel="stylesheet" href="{% static 'my_web/fontawesome/css/all.min.css' %}" crossorigin="anonymous" />
-        <link rel="shortcut icon" type="image/x-icon" href="{% static 'my_web/images/favicon.ico' %}" />
-        <link rel="icon" type="image/x-icon" href="{% static 'my_web/images/favicon.ico' %}" />
-        <link rel="stylesheet" href="{% static 'my_web/css/aos.min.css' %}" crossorigin="anonymous" />
-        <link rel="stylesheet" href="{% static 'my_web/css/tiny-slider.min.css' %}" crossorigin="anonymous" />
-        <link href="{% static 'my_web/css/main_page.min.css' %}" rel="stylesheet" crossorigin="anonymous" />
+        <link rel="stylesheet" href="{% static 'awse/bootstrap/css/bootstrap.min.css' %}" crossorigin="anonymous" />
+        <link rel="stylesheet" href="{% static 'awse/fontawesome/css/all.min.css' %}" crossorigin="anonymous" />
+        <link rel="shortcut icon" type="image/x-icon" href="{% static 'awse/images/favicon.ico' %}" />
+        <link rel="icon" type="image/x-icon" href="{% static 'awse/images/favicon.ico' %}" />
+        <link rel="stylesheet" href="{% static 'awse/css/aos.min.css' %}" crossorigin="anonymous" />
+        <link rel="stylesheet" href="{% static 'awse/css/tiny-slider.min.css' %}" crossorigin="anonymous" />
+        <link href="{% static 'awse/css/main_page.min.css' %}" rel="stylesheet" crossorigin="anonymous" />
 
         {# Fonts #}
-        <link href="{% static 'my_web/css/fonts_settings.min.css' %}" rel="stylesheet" crossorigin="anonymous" />
+        <link href="{% static 'awse/css/fonts_settings.min.css' %}" rel="stylesheet" crossorigin="anonymous" />
 
         <title>{% block title %}{% endblock %}</title>
 
