remove custom middleware

--- a/awse/templates/awse/index.html
+++ b/awse/templates/awse/index.html
@@ -1,4 +1,5 @@
 {% extends 'awse/base.html' %}
+{% spaceless %}
 
 {% block title %}
 AWARE - Search
@@ -120,4 +121,5 @@ Convenient and beautiful search engine
     </script>
     <script defer src="{% static 'awse/js/core.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 {% endblock %}
+{% endspaceless %}
 
