change domain and update security

--- a/awse/templates/awse/base.html
+++ b/awse/templates/awse/base.html
@@ -73,7 +73,7 @@
         </a>
         <div class="header_content">
             <a href="{% url 'index_page' %}">
-                <label class="header_title" style="font-family: 'Pacifico', cursive;user-select: none;">{% block title_header %}{% endblock %}</label>
+                <label class="header_title select_disable_text" style="font-family: 'Pacifico', cursive;user-select: none;">{% block title_header %}{% endblock %}</label>
             </a>
         </div>
     </div>
